	* Add EDJE_ASPECT_PREFER_SOURCE.

2012-01-07  David Seikel (onefang)

	* Lua: Calling non exstent functions no longer crashes scripts.
	   This is so that future scripts will still work with old libraries,
	   and lets us add the "host can provide Lua API" feature soon.

2012-01-09  David Seikel (onefang)

	* Lua: Added edje.version().

2012-01-14  Carsten Haitzler (The Rasterman)

        * Added minmul propery for edje to multiply minimum size during min size calc

2012-01-20  Carsten Haitzler (The Rasterman)

        * Fix the ability to change the edje file source of an edje object
        inside a callback - it worked but you couldn't swallow/set text etc.

2012-01-03  Tom Hacohen (TAsn)

	* Entry: Added edje_object_part_text_style_user_set/get that'll use
	the new corresponding textblock functions.

2012-01-23  Cedric Bail

	* Fix overridding group in edje_cc by fixing with the right index.

2012-01-24  Cedric Bail

	* Filter should only be valid once all program affecting there part are done.

2012-01-25  Cedric Bail

	* Only store the image used by active group.

2012-01-26  Cedric Bail

	* Add min: SOURCE, max: SOURCE.

2012-02-03  Jihoon Kim

	* Entry: Fix to work edje_object_part_text_input_panel_enabled_set/get well
             even though ecore_imf doesn't exist or immodule isn't used.

2012-02-07  WooHyun Jung

        * Added edje_object_markup_filter_callback_{add,del,del_full}.
        These let you append(delete) markup filter functions for filtering
        inserted text.

2012-02-08  Cedric Bail

	* Fix bug when using EDJE_CALC_CACHE and using relative to x and y
	on separate part.
	* Fix bug with filter preventing any action to be triggered.

2012-02-10  Cedric Bail

	* Prevent propagation of signal, when there is a matching target with edje GROUP.

2012-02-13  Jihoon Kim

	* add edje_object_part_text_input_panel_show/hide.
      These APIs can be used in input panel manual control mode